# Mycelium

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  pyproject.toml
docs/superpowers/specs/: 2026-04-01-beeagent-design.md
examples/: debug_tool_response.py  demo_bash.py  demo_read_write.py
mycelium/: __init__.py  agent.py
mycelium/llm/: __init__.py  openrouter.py
mycelium/permissions/: __init__.py  defaults.py  guard.py
mycelium/tools/: __init__.py  base.py  bash.py  read_file.py  write_file.py
tests/: test_bee.py  test_bee_manual.py  test_openrouter.py  test_permissions.py  test_read_write.py
